Added Comment and Roles to users as well as spring security feature.